[gd_scene load_steps=3 format=3 uid="uid://bcu3ebetniqjy"]

[ext_resource type="Script" path="res://addons/godot_rulebook/editor/core/editor_predicate.gd" id="1_70nk4"]
[ext_resource type="Texture2D" uid="uid://b1v7jayblixhl" path="res://addons/godot_rulebook/editor/assets/icons/remove.svg" id="2_adx5x"]

[node name="EditorPredicate" type="VBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -72.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_70nk4")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MonitorableTypeOptions" type="OptionButton" parent="Header"]
unique_name_in_owner = true
layout_mode = 2
selected = -1
allow_reselect = true
item_count = 0

[node name="MonitorableIdentifier" type="LineEdit" parent="Header"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Identifier"
alignment = 1
expand_to_text_length = true

[node name="HSeparator" type="HSeparator" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteMonitorable" type="Button" parent="Header"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_adx5x")

[node name="PremisesMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Premises" type="VBoxContainer" parent="PremisesMargin"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddPremise" type="Button" parent="PremisesMargin/Premises"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "+ Premise"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[connection signal="item_selected" from="Header/MonitorableTypeOptions" to="." method="_on_monitorable_type_item_selected"]
[connection signal="pressed" from="Header/DeleteMonitorable" to="." method="_on_delete_monitorable_pressed"]
[connection signal="pressed" from="PremisesMargin/Premises/AddPremise" to="." method="_on_add_premise_pressed"]
